--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-  </head>
+  {{ partial "head.html" . }}
   <body>
-    <!-- Code that all your templates share, like a header -->
     {{ block "main" . }}
-      <!-- The part of the page that begins to differ between templates -->
     {{ end }}
   </body>
 </html>
