Redesigned landing page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,5 +5,7 @@
 @import 'base/typography';
 
 @import 'components/buttons';
+@import 'components/section';
 
 @import 'layouts/home';
+@import 'layouts/footer';
