--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,23 +1,13 @@
 body {
   color: #333;
+  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  border-bottom: 2px solid #e3e4e4;
-  font-family: 'Cormorant Garamond', serif;
-  font-weight: 400;
-  margin-bottom: 1.5rem;
-}
+p {
+  color: #586679;
+  word-spacing: .05em;
 
-h2 {
-  font-size: 3.8rem;
-}
-
-h3 {
-  font-size: 2.8rem;
+  .home & {
+    font-size: 1.8rem;
+  }
 }
