--- a/assets/scss/layouts/_home.scss
+++ b/assets/scss/layouts/_home.scss
@@ -1,18 +1,19 @@
 header {
-  background-image: url('/images/background.jpg');
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  // background-image: url('/images/background.jpg');
+  // background-position: center center;
+  // background-repeat: no-repeat;
+  // background-size: cover;
+  align-items: center;
+  background-image: linear-gradient( 135deg, #F05F57 10%, #360940 100%);
   display: flex;
-  height: 85%;
+  height: 80%;
   justify-content: center;
   min-height: 450px;
   position: relative;
 }
 
 .head {
-  position: absolute;
-  top: 15%;
+  margin-top: -2%;
 }
 
 .head__image {
@@ -97,6 +98,16 @@ header {
   }
 }
 
-main nav {
-  margin-bottom: 25px;
+section:nth-of-type(1) img {
+  transform: translateY(20px) translateX(-40px) scale(.75);
+}
+
+section:nth-of-type(2) img {
+  transform: rotate(-9deg) translateY(40%);
+}
+
+.new {
+  h3 {
+    margin-bottom: 30px;
+  }
 }
