--- a/assets/scss/layouts/_home.scss
+++ b/assets/scss/layouts/_home.scss
@@ -1,15 +1,13 @@
 header {
-  // background-image: url('/images/background.jpg');
-  // background-position: center center;
-  // background-repeat: no-repeat;
-  // background-size: cover;
   align-items: center;
-  background-image: linear-gradient( 135deg, #F05F57 10%, #360940 100%);
+  background-image: url('/images/background_overlay.png'), linear-gradient( 135deg, #F05F57 10%, #360940 100%);
   display: flex;
   height: 80%;
   justify-content: center;
   min-height: 450px;
+  max-height: 600px;
   position: relative;
+  z-index: 2;
 }
 
 .head {
@@ -99,15 +97,38 @@ header {
 }
 
 section:nth-of-type(1) img {
-  transform: translateY(20px) translateX(-40px) scale(.75);
+  height: 500px;
+  position: absolute;
+  top: -11px;
+  transform: translateX(50px);
+
+  @media screen and (max-width: 768px) {
+    opacity: .2;
+    right: 60px;
+  }
 }
 
-section:nth-of-type(2) img {
-  transform: rotate(-9deg) translateY(40%);
+section:nth-of-type(2) {
+
+  img {
+    transform: rotate(-9deg) translateY(50%) translateX(-10px) scale(.65);
+
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+  }
+}
+
+.home {
+  position: relative;
 }
 
 .new {
   h3 {
     margin-bottom: 30px;
+  }
+  .column {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 }
