--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,8 +6,8 @@
           <h1>Luma</h1>
           <h2><span>Lightweight, <strong>Flex</strong>ible</span></h2>
           <div class="head__buttons">
-            <a class="button is-outline is-doc">Get Started</a>
-            <a class="button is-outline is-doc is-right">Github</a>
+            <a class="button is-outline is-doc" href="#!">Get Started</a>
+            <a class="button is-outline is-doc is-right" href="#!">Github</a>
           </div>
         </div>
     </div>    
