--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,8 +22,14 @@
   <link href="/css/luma-docs.min.css" rel="stylesheet">
 
   <!-- Favicon and Apple Touch Icons-->
-  <link rel="shortcut icon" href="{{ .Site.BaseURL }}img/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}img/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="Luma - CSS Framework">
+  <meta name="application-name" content="Luma - CSS Framework">
+  <meta name="theme-color" content="#ec556c">
 
   <!-- Facebook OpenGraph tags -->
   <meta property="og:title" content="{{ .Title }}" />
