--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer>
   <div class="container">
     <ul>
-      <li><a href="#!">Documentation</a></li>
-      <li><a href="#!">News</a></li>
-      <li><a href="#!">Built with Luma</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/docs">Documentation</a></li>
+      <li><a href="/sites">Built with Luma</a></li>
     </ul>
     <p><img src="/images/luma.png"> was made with ♥ by <a href="#!">Elisha Witte</a></p>
   </div>
