--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,10 +1,8 @@
-<nav class="nav has-depth">
-  <div class="container">
-    <div class="nav-left">
-      <a class="nav-item is-tab is-active">Overview</a>
-      <a class="nav-item is-tab" href="base/typography">Base</a>
-      <a class="nav-item is-tab" href="elements/labels">Elements</a>
-      <a class="nav-item is-tab" href="layouts/grid">Layouts</a>
-    </div>
-  </div>
+<nav>
+  <ul class="container">
+    <li class="logo"><img src="/images/luma.png"><span>Luma</span></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="/docs">Documentation</a></li>
+    <li><a href="/sites">Built with Luma</a></li>
+  </ul>
 </nav>
