--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,3 +1,26 @@
 $color-primary: #ec556c;
 $color-light: #d9b9a2;
 $color-blue: #f6f9fd;
+$color-grey: #777;
+
+$color-border: #e1e1e1;
+
+// Base
+$color-body-bg: #fdfcfb;
+
+// Home
+$gradient-from: #f05f57;
+$gradient-to: #360940;
+
+// Footer
+$color-text-footer: #aeaeae;
+
+// Buttons
+$color-button-doc: #fffbcb;
+$color-button-doc-focus: #fbe9ad;
+$color-button-doc-accent: #8f6553;
+
+// Typography
+$color-base: #333;
+$color-text: #586679;
+$font-stack: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
