--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,10 +1,10 @@
 body {
-  color: #333;
-  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  color: $color-base;
+  font-family: $font-stack;
 }
 
 p {
-  color: #586679;
+  color: $color-text;
   word-spacing: .05em;
 
   .home & {
