--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -1,15 +1,3 @@
-header {
-  align-items: center;
-  background-image: url('/images/background_overlay.png'), linear-gradient( 135deg, #F05F57 10%, #360940 100%);
-  display: flex;
-  height: 80%;
-  justify-content: center;
-  min-height: 450px;
-  max-height: 600px;
-  position: relative;
-  z-index: 2;
-}
-
 .head {
   margin-top: -2%;
 }
@@ -35,21 +23,21 @@ header {
   vertical-align: middle;
 
   h1 {
-    border: none;
-    font-size: 12rem;
+    border: 0;
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 12rem;
     font-weight: 300;
     letter-spacing: .1rem;
     margin: -30px -12px 0 -14px;
   }
 
   h2 {
-    border: none;
-    font-size: 1.9rem;
+    border: 0;
     font-family: 'Josefin Sans', sans-serif;
+    font-size: 1.9rem;
     font-weight: 300;
-    line-height: 0.5;
-    margin: -40px 0 20px 0;;
+    line-height: .5;
+    margin: -40px 0 20px;
     text-align: center;
 
     span {
@@ -59,7 +47,7 @@ header {
       &::before,
       &::after {
         border-bottom: 2px solid $color-light;
-        content: "";
+        content: '';
         height: 5px;
         position: absolute;
         top: 0;
@@ -91,44 +79,62 @@ header {
 .head__buttons {
   display: flex;
 
-  button:nth-child(2) {
-    margin-right: 0;
+  button {
+    &:nth-child(2) {
+      margin-right: 0;
+    }
   }
 }
 
-section:nth-of-type(1) img {
-  height: 500px;
-  position: absolute;
-  top: -11px;
-  transform: translateX(50px);
-
-  @media screen and (max-width: 768px) {
-    opacity: .2;
-    right: 60px;
-  }
-}
-
-section:nth-of-type(2) {
-
-  img {
-    transform: rotate(-9deg) translateY(50%) translateX(-10px) scale(.65);
+section {
+  &:nth-of-type(1) img {
+    height: 500px;
+    position: absolute;
+    top: -11px;
+    transform: translateX(50px);
 
     @media screen and (max-width: 768px) {
-      display: none;
+      opacity: .2;
+      right: 60px;
+    }
+  }
+
+  &:nth-of-type(2) {
+    img {
+      transform: rotate(-9deg) translateY(50%) translateX(-10px) scale(.65);
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
     }
   }
 }
 
 .home {
   position: relative;
+
+  h2 {
+    margin: 2rem 0;
+    text-align: center;
+
+    @include tablet {
+      margin: 0 0 .5rem;
+      text-align: left;
+    }
+  }
+
+  .submit {
+    margin-top: 20px;
+  }
 }
 
 .new {
   h3 {
     margin-bottom: 30px;
   }
+
   .column {
-    padding-top: 1rem;
     padding-bottom: 1rem;
+    padding-top: 1rem;
   }
 }
