--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,39 @@
 {{ define "main" }}
-  <header>
+  <header class="header">
     <div class="head">
         <img class="head__image" src="/images/luma_landing.png" alt="Background Image">
         <div class="head__info">
           <h1>Luma</h1>
           <h2><span>Lightweight, <strong>Flex</strong>ible</span></h2>
           <div class="head__buttons">
-            <a class="button is-outline is-doc" href="#!">Get Started</a>
-            <a class="button is-outline is-doc is-right" href="#!">Github</a>
+            <a class="button is-outline is-doc" href="/docs">Get Started</a>
+            <a class="button is-outline is-doc is-right" href="https://github.com/D2Allaire/luma">Github</a>
           </div>
         </div>
     </div>    
   </header>
   <main aria-role="main" class="home">
     {{ .Content }}
+    <section>
+      <div class="container">
+        <h3>Sites built with Luma</h3>
+        <div class="row is-multiline">
+          {{ range first 6 .Site.Taxonomies.sites.show.Pages }}
+            {{ .Render "summary" }}
+          {{ end }}
+        </div>
+        <a href="#" class="button is-primary submit">Submit your own site!</a>
+      </div>
+    </section>
+    <section class="blue">
+      <div class="container">
+        <h3>Latest releases</h3>
+        <div class="row is-multiline">
+          {{ range .Site.Taxonomies.versions.show.Pages }}
+            {{ .Render "summary" }}
+          {{ end }}
+        </div>
+      </div>
+    </section>  
   </main>
 {{ end }}
