--- a/layouts/shortcodes/card.html
+++ b/layouts/shortcodes/card.html
@@ -1,12 +1,17 @@
 <div class="card">
+  {{ with .Get "img" }}
+  <div class="card-image">
+    <img src="/images/{{ . }}" />
+  </div>
+  {{ end }}
   <div class="card-content">
     <span class="card-title">{{ .Get "title" }}</span>
     <p>{{ .Inner }}</p>
   </div>
   <div class="card-action">
-    <a>
-      <i class="mdi mdi-bookmark"></i>
-      Read more
+    <a href="{{ .Get "url" }}">
+      <i class="mdi mdi-arrow-right-bold"></i>
+      Visit
     </a>
   </div>
 </div>
