Add sidebar styles

--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -4,9 +4,7 @@
 {{ partial "navigation" }}
 <main aria-role="main" class="docs">
   <div class="container">
-    <aside>
-
-    </aside>
+    {{ partial "sidebar" }}
     <article>
         {{ .Content }}
     </article>
