--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -8,9 +8,11 @@ $color-border: #e1e1e1;
 // Base
 $color-body-bg: #fdfcfb;
 
-// Home
+// Header
 $gradient-from: #f05f57;
 $gradient-to: #360940;
+$gradient-from--small: #f05f57;
+$gradient-to--small: #f15c8c;
 
 // Footer
 $color-text-footer: #aeaeae;
