--- a/assets/scss/layouts/_sidebar.scss
+++ b/assets/scss/layouts/_sidebar.scss
@@ -11,7 +11,7 @@ aside {
   > ul > li {
     font-size: 1.4rem;
     font-weight: bold;
-    padding: 5px 0 5px 0;
+    padding: 5px 0;
 
     a {
       color: $color-primary;
