--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,7 +3,7 @@
     <li><a>Getting Started</a></li>
     <li><a>Base</a>
         <ul>
-            <li><a>Typography</a></li>
+            <li><a href="/docs/typography">Typography</a></li>
         </ul>
     </li>
 </ul>
