Added typography documentation

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,7 @@
 
 @import 'components/buttons';
 @import 'components/section';
+@import 'components/infoblock';
 
 @import 'pages/home';
 @import 'pages/versions';
