--- a/assets/scss/pages/_docs.scss
+++ b/assets/scss/pages/_docs.scss
@@ -2,5 +2,24 @@
   article {
     margin-left: 300px;
     padding: 40px 0 50px;
+
+    > h1,
+    > h2,
+    > h3,
+    > h4,
+    > h5,
+    > h6 {
+      margin: 20px 0;
+    }
+
+    > h1 {
+      margin-top: 0;
+    }
   }
+
+  pre[class*="language-"] {
+    background: $color-bg-code;
+    margin: 0 0 2.5rem 0;
+  }
+
 }
