--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,7 @@
   <body>
     {{ block "main" . }}
     {{ end }}
-  {{ partial "footer.html" . }}  
+  {{ partial "footer.html" . }}
+  <script src="/js/luma-docs.min.js"></script>
   </body>
 </html>
