Added typography documentation

--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -6,7 +6,8 @@
   <div class="container">
     {{ partial "sidebar" . }}
     <article>
-        {{ .Content }}
+      {{ .TableOfContents }}
+      {{ .Content }}
     </article>
   </div>
 </main>
