--- a/assets/scss/pages/_docs.scss
+++ b/assets/scss/pages/_docs.scss
@@ -2,5 +2,66 @@
   article {
     margin-left: 300px;
     padding: 40px 0 50px;
+
+    > h1,
+    > h2,
+    > h3,
+    > h4,
+    > h5,
+    > h6 {
+      margin: 20px 0;
+    }
+
+    > h1 {
+      margin-top: 0;
+    }
   }
+
+  pre[class*="language-"] {
+    background: $color-bg-code;
+    margin: 0 0 2.5rem 0;
+  }
+
+  #TableOfContents {
+    border-bottom: 1px solid $color-border;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+
+    ul {
+      margin: 0;
+    }
+
+    > ul > li {
+      font-weight: bold;
+
+      > ul {
+        margin-left: 30px;
+
+        > li {
+          font-weight: 500;
+
+          > ul {
+            margin-left: 20px;
+          }
+        }
+      }
+    }
+
+    li {
+      font-size: 1.4rem;
+      list-style: none;
+      margin: 2px 0;
+
+      a {
+        color: $color-primary;
+        text-transform: capitalize;
+      }
+    }
+  }
+
+  h5,
+  h6 {
+    text-transform: uppercase;
+  }
+
 }
