Add code documentation

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,9 +1,38 @@
 <aside>
 <ul>
-    <li><a>Getting Started</a></li>
+    <li><a>Getting Started</a>
+        <ul>
+            <li><a href="#">Installation</a></li>
+            <li><a href="#">Structure</a></li>
+            <li><a href="#">Customization</a></li>
+        </ul>
+    </li>
     <li><a>Base</a>
         <ul>
+            <li><a href="#">Grid</a></li>
             <li><a href="/docs/typography">Typography</a></li>
+            <li><a href="/docs/code">Code</a></li>
+            <li><a href="#">Lists</a></li>
+            <li><a href="#">Tables</a></li>
+            <li><a href="#">Forms</a></li>
+        </ul>
+    </li>
+    <li><a href="#">Default Components</a>
+        <ul>
+            <li><a href="#">Labels</a></li>
+            <li><a href="#">Buttons</a></li>
+            <li><a href="#">Alerts</a></li>
+            <li><a href="#">Cards</a></li>
+        </ul>
+    </li>
+
+    <li><a href="#">Extension Components</a>
+        <ul>
+            <li><a href="#">Pagination</a></li>
+            <li><a href="#">Breadcrumbs</a></li>
+            <li><a href="#">Loading Spinner</a></li>
+            <li><a href="#">Modals</a></li>
+            <li><a href="#">Navigation</a></li>
         </ul>
     </li>
 </ul>
