Add lists documentation

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -12,7 +12,7 @@
             <li><a href="#">Grid</a></li>
             <li><a href="/docs/typography">Typography</a></li>
             <li><a href="/docs/code">Code</a></li>
-            <li><a href="#">Lists</a></li>
+            <li><a href="/docs/lists">Lists</a></li>
             <li><a href="#">Tables</a></li>
             <li><a href="#">Forms</a></li>
         </ul>
