--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -13,7 +13,7 @@
             <li><a href="/docs/typography">Typography</a></li>
             <li><a href="/docs/code">Code</a></li>
             <li><a href="/docs/lists">Lists</a></li>
-            <li><a href="#">Tables</a></li>
+            <li><a href="/docs/tables">Tables</a></li>
             <li><a href="#">Forms</a></li>
         </ul>
     </li>
