--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -7,9 +7,9 @@
             <li><a href="#">Customization</a></li>
         </ul>
     </li>
-    <li><a>Base</a>
+    <li><a href="/docs/grid">Base</a>
         <ul>
-            <li><a href="#">Grid</a></li>
+            <li><a href="/docs/grid">Grid</a></li>
             <li><a href="/docs/typography">Typography</a></li>
             <li><a href="/docs/code">Code</a></li>
             <li><a href="/docs/lists">Lists</a></li>
