--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -26,3 +26,11 @@ $color-button-doc-accent: #8f6553;
 $color-base: #333;
 $color-text: #586679;
 $font-stack: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+// Docs
+$column-red-from: #ff9a9e;
+$column-red-to: #fdb7a2;
+$column-blue-from: #6a85b6;
+$column-blue-to: #8eb2ef;
+$row-from: #e6e9f0;
+$row-to: #eef1f5;
