--- a/assets/scss/layouts/_nav.scss
+++ b/assets/scss/layouts/_nav.scss
@@ -1,51 +1,53 @@
-nav:not(#TableOfContents) {
-  border-bottom: 1px solid $color-border;
-  padding: 20px 0;
+nav {
+  &:not(#TableOfContents) {
+    border-bottom: 1px solid $color-border;
+    padding: 20px 0;
 
-  ul {
-    align-items: center;
-    display: flex;
-    justify-content: flex-end;
+    ul {
+      align-items: center;
+      display: flex;
+      justify-content: flex-end;
 
-    li {
-      font-size: 1.6rem;
-      list-style-type: none;
-      padding: 0 20px;
+      li {
+        font-size: 1.6rem;
+        list-style-type: none;
+        padding: 0 20px;
 
-      &:first-child {
-        padding-left: 0;
+        &:first-child {
+          padding-left: 0;
+        }
+
+        &:last-child {
+          padding-right: 0;
+        }
+      }
+    }
+
+    a {
+      color: $color-text;
+
+      &:hover {
+        color: $color-primary;
+      }
+    }
+
+    .logo {
+      align-items: center;
+      display: flex;
+      margin-right: auto;
+
+      img {
+        height: 40px;
+        margin-right: 20px;
+        width: auto;
       }
 
-      &:last-child {
-        padding-right: 0;
+      span {
+        color: $color-primary;
+        font-size: 2.2rem;
+        font-weight: 600;
       }
+
     }
-  }
-
-  a {
-    color: $color-text;
-
-    &:hover {
-      color: $color-primary;
-    }
-  }
-
-  .logo {
-    align-items: center;
-    display: flex;
-    margin-right: auto;
-
-    img {
-      height: 40px;
-      margin-right: 20px;
-      width: auto;
-    }
-
-    span {
-      color: $color-primary;
-      font-size: 2.2rem;
-      font-weight: 600;
-    }
-
   }
 }
