--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navigation">
   <ul class="container">
     <li class="logo"><img src="/images/luma.png"><span>Luma</span></li>
     <li><a href="/">Home</a></li>
