--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -28,7 +28,7 @@
 
     <li><a href="#">Extension Components</a>
         <ul>
-            <li><a href="#">Pagination</a></li>
+            <li><a href="/docs/pagination">Pagination</a></li>
             <li><a href="#">Breadcrumbs</a></li>
             <li><a href="#">Loading Spinner</a></li>
             <li><a href="#">Modals</a></li>
