Add breadcrumbs documentation

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -23,14 +23,13 @@
             <li><a href="#">Buttons</a></li>
             <li><a href="#">Alerts</a></li>
             <li><a href="#">Cards</a></li>
+            <li><a href="/docs/pagination">Pagination</a></li>
+            <li><a href="/docs/breadcrumbs">Breadcrumbs</a></li>
         </ul>
     </li>
 
     <li><a href="#">Extension Components</a>
         <ul>
-            <li><a href="/docs/pagination">Pagination</a></li>
-            <li><a href="#">Breadcrumbs</a></li>
-            <li><a href="#">Loading Spinner</a></li>
             <li><a href="#">Modals</a></li>
             <li><a href="#">Navigation</a></li>
         </ul>
