--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,38 +1,38 @@
 <aside>
-<ul>
+  <ul>
     <li><a>Getting Started</a>
-        <ul>
-            <li><a href="#">Installation</a></li>
-            <li><a href="#">Structure</a></li>
-            <li><a href="#">Customization</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">Installation</a></li>
+        <li><a href="#">Structure</a></li>
+        <li><a href="#">Customization</a></li>
+      </ul>
     </li>
     <li><a href="/docs/grid">Base</a>
-        <ul>
-            <li><a href="/docs/grid">Grid</a></li>
-            <li><a href="/docs/typography">Typography</a></li>
-            <li><a href="/docs/code">Code</a></li>
-            <li><a href="/docs/lists">Lists</a></li>
-            <li><a href="/docs/tables">Tables</a></li>
-            <li><a href="#">Forms</a></li>
-        </ul>
+      <ul>
+        <li><a href="/docs/grid">Grid</a></li>
+        <li><a href="/docs/typography">Typography</a></li>
+        <li><a href="/docs/code">Code</a></li>
+        <li><a href="/docs/lists">Lists</a></li>
+        <li><a href="/docs/tables">Tables</a></li>
+        <li><a href="#">Forms</a></li>
+      </ul>
     </li>
     <li><a href="#">Default Components</a>
-        <ul>
-            <li><a href="#">Labels</a></li>
-            <li><a href="#">Buttons</a></li>
-            <li><a href="#">Alerts</a></li>
-            <li><a href="#">Cards</a></li>
-            <li><a href="/docs/pagination">Pagination</a></li>
-            <li><a href="/docs/breadcrumbs">Breadcrumbs</a></li>
-        </ul>
+      <ul>
+        <li><a href="/docs/labels">Labels</a></li>
+        <li><a href="#">Buttons</a></li>
+        <li><a href="#">Alerts</a></li>
+        <li><a href="#">Cards</a></li>
+        <li><a href="/docs/pagination">Pagination</a></li>
+        <li><a href="/docs/breadcrumbs">Breadcrumbs</a></li>
+      </ul>
     </li>
 
     <li><a href="#">Extension Components</a>
-        <ul>
-            <li><a href="#">Modals</a></li>
-            <li><a href="#">Navigation</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">Modals</a></li>
+        <li><a href="#">Navigation</a></li>
+      </ul>
     </li>
-</ul>
+  </ul>
 </aside>
