--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -20,7 +20,7 @@
     <li><a href="#">Default Components</a>
       <ul>
         <li><a href="/docs/labels">Labels</a></li>
-        <li><a href="#">Buttons</a></li>
+        <li><a href="/docs/buttons">Buttons</a></li>
         <li><a href="#">Alerts</a></li>
         <li><a href="#">Cards</a></li>
         <li><a href="/docs/pagination">Pagination</a></li>
