--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -14,7 +14,7 @@
         <li><a href="/docs/code">Code</a></li>
         <li><a href="/docs/lists">Lists</a></li>
         <li><a href="/docs/tables">Tables</a></li>
-        <li><a href="#">Forms</a></li>
+        <li><a href="/docs/forms">Forms</a></li>
       </ul>
     </li>
     <li><a href="#">Default Components</a>
