Add card documentation

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -22,7 +22,7 @@
         <li><a href="/docs/labels">Labels</a></li>
         <li><a href="/docs/buttons">Buttons</a></li>
         <li><a href="/docs/alerts">Alerts</a></li>
-        <li><a href="#">Cards</a></li>
+        <li><a href="/docs/cards">Cards</a></li>
         <li><a href="/docs/pagination">Pagination</a></li>
         <li><a href="/docs/breadcrumbs">Breadcrumbs</a></li>
       </ul>
