--- a/assets/scss/layouts/_sidebar.scss
+++ b/assets/scss/layouts/_sidebar.scss
@@ -13,6 +13,10 @@ aside {
     font-weight: bold;
     padding: 5px 0;
 
+    span {
+      color: $color-primary;
+    }
+
     a {
       color: $color-primary;
 
