--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,7 +17,7 @@
   <!-- Stylesheets -->
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600" rel="stylesheet">
-  <link rel="stylesheet" href="http://cdn.materialdesignicons.com/1.8.36/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/1.8.36/css/materialdesignicons.min.css">
   <link href="/css/luma-docs.min.css" rel="stylesheet">
 
   <!-- Favicon and Apple Touch Icons-->
