Add navigation component

--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -35,3 +35,11 @@ $column-blue-to: #8eb2ef;
 $row-from: #e6e9f0;
 $row-to: #eef1f5;
 $color-example-dark: #2a2b2d;
+
+$hamburger-layer-width: 25px;
+$hamburger-layer-height: 3px;
+$hamburger-layer-spacing: 4px;
+$hamburger-layer-color: #6c778e;
+$hamburger-types: (
+        spin,
+);
