--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,6 +2,7 @@
 @import '../vendor/luma/src/scss/main';
 
 @import 'abstracts/variables';
+@import '../../node_modules/hamburgers/_sass/hamburgers/hamburgers';
 
 @import 'base/base';
 @import 'base/typography';
