--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -6,3 +6,50 @@
     <li><a href="/sites">Built with Luma</a></li>
   </ul>
 </nav>
+
+<nav id="menu" class="nav-mobile">
+    <section class="menu__main">
+      <ul>
+        <li class="logo"><img src="/images/luma.png"><span>Luma</span></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/docs">Documentation</a></li>
+        <li><a href="/sites">Built with Luma</a></li>
+      </ul>
+    </section>
+    <section class="menu__docs">
+      <h4>Getting Started</h4>
+      <ul>
+          <li><a href="#">Installation</a></li>
+          <li><a href="#">Structure</a></li>
+          <li><a href="#">Customization</a></li>
+        </ul>
+    </section>
+  <section class="menu__docs">
+    <h4>Base</h4>
+    <ul>
+      <li><a href="/docs/grid">Grid</a></li>
+      <li><a href="/docs/typography">Typography</a></li>
+      <li><a href="/docs/code">Code</a></li>
+      <li><a href="/docs/lists">Lists</a></li>
+      <li><a href="/docs/tables">Tables</a></li>
+      <li><a href="/docs/forms">Forms</a></li>
+    </ul>
+  </section>
+  <section class="menu__docs">
+    <h4>Default Components</h4>
+    <ul>
+      <li><a href="/docs/labels">Labels</a></li>
+      <li><a href="/docs/buttons">Buttons</a></li>
+      <li><a href="/docs/alerts">Alerts</a></li>
+      <li><a href="/docs/cards">Cards</a></li>
+      <li><a href="/docs/pagination">Pagination</a></li>
+      <li><a href="/docs/breadcrumbs">Breadcrumbs</a></li>
+    </ul>
+  </section>
+  <section class="menu__docs">
+    <h4>Extension Components</h4>
+    <ul>
+      <li><a href="/docs/navigation">Navigation</a></li>
+    </ul>
+  </section>
+</nav>
