--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,13 +1,13 @@
 <aside>
   <ul>
-    <li><a>Getting Started</a>
+    <li><span>Getting Started</span>
       <ul>
         <li><a href="#">Installation</a></li>
         <li><a href="#">Structure</a></li>
         <li><a href="#">Customization</a></li>
       </ul>
     </li>
-    <li><a href="/docs/grid">Base</a>
+    <li><span>Base</span>
       <ul>
         <li><a href="/docs/grid">Grid</a></li>
         <li><a href="/docs/typography">Typography</a></li>
@@ -17,7 +17,7 @@
         <li><a href="/docs/forms">Forms</a></li>
       </ul>
     </li>
-    <li><a href="#">Default Components</a>
+    <li><span>Default Components</span>
       <ul>
         <li><a href="/docs/labels">Labels</a></li>
         <li><a href="/docs/buttons">Buttons</a></li>
@@ -28,10 +28,9 @@
       </ul>
     </li>
 
-    <li><a href="#">Extension Components</a>
+    <li><span>Extension Components</span>
       <ul>
-        <li><a href="#">Modals</a></li>
-        <li><a href="#">Navigation</a></li>
+        <li><a href="/docs/navigation">Navigation</a></li>
       </ul>
     </li>
   </ul>
