--- a/assets/scss/pages/_docs.scss
+++ b/assets/scss/pages/_docs.scss
@@ -1,6 +1,5 @@
 .docs {
   article {
-    margin-left: 300px;
     padding: 40px 0 50px;
 
     > h1,
@@ -14,6 +13,10 @@
 
     > h1 {
       margin-top: 0;
+    }
+
+    @include tablet {
+      margin-left: 300px;
     }
   }
 
@@ -50,7 +53,7 @@
     }
 
     li {
-      font-size: 1.4rem;
+      font-size: 1.6rem;
       list-style: none;
       margin: 2px 0;
 
@@ -64,6 +67,11 @@
   h5,
   h6 {
     text-transform: uppercase;
+  }
+
+  .example h5,
+  .example h6 {
+    text-transform: none;
   }
 }
 
@@ -99,4 +107,8 @@
       margin: 0;
     }
   }
+}
+
+.nav input {
+  max-width: 200px;
 }
