--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
           <h2><span>Lightweight, <strong>Flex</strong>ible</span></h2>
           <div class="head__buttons">
             <a class="button is-outline is-doc" href="/docs">Get Started</a>
-            <a class="button is-outline is-doc is-right" href="https://github.com/D2Allaire/luma">Github</a>
+            <a class="button is-outline is-doc is-right" href="https://github.com/chiiya/luma">Github</a>
           </div>
         </div>
     </div>    
