--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -7,7 +7,20 @@
   </ul>
 </nav>
 
-<nav id="menu" class="nav-mobile">
+<div class="nav is-toggle">
+  <div class="nav-left">
+    <a class="nav-item" href="/"><img src="/images/luma.png"></a>
+  </div>
+  <div class="nav-right">
+    <button class="nav-item hamburger hamburger--spin" type="button">
+      <span class="hamburger-box">
+        <span class="hamburger-inner"></span>
+      </span>
+    </button>
+  </div>
+</div>
+
+<nav id="menu" class="nav is-responsive">
     <section class="menu__main">
       <ul>
         <li class="logo"><img src="/images/luma.png"><span>Luma</span></li>
