Add structure documentation

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -33,7 +33,7 @@
       <h4>Getting Started</h4>
       <ul>
           <li><a href="#">Installation</a></li>
-          <li><a href="#">Structure</a></li>
+          <li><a href="/docs/structure">Structure</a></li>
           <li><a href="#">Customization</a></li>
         </ul>
     </section>
