--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -3,7 +3,7 @@
     <li><span>Getting Started</span>
       <ul>
         <li><a href="#">Installation</a></li>
-        <li><a href="#">Structure</a></li>
+        <li><a href="/docs/structure">Structure</a></li>
         <li><a href="#">Customization</a></li>
       </ul>
     </li>
