Add customization documentation

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -34,7 +34,7 @@
       <ul>
           <li><a href="#">Installation</a></li>
           <li><a href="/docs/structure">Structure</a></li>
-          <li><a href="#">Customization</a></li>
+          <li><a href="/docs/customization">Customization</a></li>
         </ul>
     </section>
   <section class="menu__docs">
