--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
       <ul>
         <li><a href="#">Installation</a></li>
         <li><a href="/docs/structure">Structure</a></li>
-        <li><a href="#">Customization</a></li>
+        <li><a href="/docs/customization">Customization</a></li>
       </ul>
     </li>
     <li><span>Base</span>
