--- a/assets/scss/pages/_versions.scss
+++ b/assets/scss/pages/_versions.scss
@@ -10,6 +10,7 @@
     border-bottom: 1px solid $color-border;
     display: flex;
     padding-bottom: 10px;
+    margin-bottom: 20px;
 
     h2 {
       color: $color-grey;
@@ -19,5 +20,9 @@
     a {
       margin-left: auto;
     }
+  }
+
+  form  {
+    margin-top: 20px;
   }
 }
