Add link to site submit page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,7 +22,7 @@
             {{ .Render "summary" }}
           {{ end }}
         </div>
-        <a href="#" class="button is-primary submit">Submit your own site!</a>
+        <a href="/sites/submit" class="button is-primary submit">Submit your own site!</a>
       </div>
     </section>
     <section class="blue">
