--- a/layouts/page/submit-site.html
+++ b/layouts/page/submit-site.html
@@ -7,7 +7,7 @@
     <a href="/" class="highlight"><i class="mdi mdi-arrow-left"></i>Back</a>
     <div class="row">
       <div class="column is-6">
-        <form name="contact" netlify>
+        <form name="site" netlify>
           <p>
             <label>Name: <input type="text" name="name" placeholder="The name of your website"></label>
           </p>
