--- a/layouts/sites/list.html
+++ b/layouts/sites/list.html
@@ -8,7 +8,7 @@
     <article>
       <div class="version__head">
         <h2>Sites built with Luma</h2>
-        <a href="#" class="button is-primary has-depth">Submit your own site!</a>
+        <a href="/sites/submit" class="button is-primary has-depth">Submit your own site!</a>
       </div>
       <div class="row is-multiline">
         {{ range .Paginator.Pages }}
