Add installation documentation

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -2,7 +2,7 @@
   <ul>
     <li><span>Getting Started</span>
       <ul>
-        <li><a href="#">Installation</a></li>
+        <li><a href="/docs/installation">Installation</a></li>
         <li><a href="/docs/structure">Structure</a></li>
         <li><a href="/docs/customization">Customization</a></li>
       </ul>
