--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -32,7 +32,7 @@
     <section class="menu__docs">
       <h4>Getting Started</h4>
       <ul>
-          <li><a href="#">Installation</a></li>
+          <li><a href="/docs/installation">Installation</a></li>
           <li><a href="/docs/structure">Structure</a></li>
           <li><a href="/docs/customization">Customization</a></li>
         </ul>
