Upgrade luma framework to 0.4.5

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -27,3 +27,13 @@ main {
 .container {
   max-width: 1080px;
 }
+
+.nav.is-toggle {
+  .hamburger {
+    height: 17px;
+  }
+
+  img {
+    height: 25px;
+  }
+}
