Upgrade to Luma v0.4.7

--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -46,6 +46,7 @@
       <li><a href="/docs/lists">Lists</a></li>
       <li><a href="/docs/tables">Tables</a></li>
       <li><a href="/docs/forms">Forms</a></li>
+      <li><a href="/docs/helpers">Helpers</a></li>
     </ul>
   </section>
   <section class="menu__docs">
