--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -15,6 +15,7 @@
         <li><a href="/docs/lists">Lists</a></li>
         <li><a href="/docs/tables">Tables</a></li>
         <li><a href="/docs/forms">Forms</a></li>
+        <li><a href="/docs/helpers">Helpers</a></li>
       </ul>
     </li>
     <li><span>Default Components</span>
